# CRISP-Bench

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-full.txt  run.sh
collect_results/: collect_qa_sg.py  collect_results.py
configs/: eval.yaml  nuscenes.yaml  scannetpp.yaml
data_preprocessing/: aggregate_dataset.py  dataset_statistics.py  export_marks.py  filter_nodes.py  mark_objects.py  marks_core.py  object_filter.py  render_marks.py  world_to_camera_translation.py
data_preprocessing/scannetpp_official/: README.md  merge_sg.py  my_config.yml  requirements.txt  scannetpp_convert_sg.py
docs/: data_format.md  datasets.md  installation.md  pipeline.md  user_guide.md
evaluation/: __init__.py  calculate_consistency.py  convert_GT_scene_graph.py  extract_sg.py  run_consistency_eval.py  scene_graph_solver.py
qa/: generate_qa_pairs.py  qa_balance_mcq.py  question_template.json
scene_graph/: convert_sg_to_sharegpt.py  edge_based_filter.py  edge_construction.py  node_construction.py
scripts/: 01_preprocess_nuscenes.sh  02_preprocess_scannetpp.sh  03_build_scene_graph.sh  04_generate_qa.sh  05_prepare_tasks.sh  06_run_evaluation.sh  07_consistency_eval.sh  load_config.py  read_model_matrix.py  verify_setup.py
scripts/eval_models/: gemini.sh  gpt5.sh  internvl3_5.sh  llava_onevision1_5.sh  vllm_qwen3vl.sh
tasks/crisp_qa/: crisp_qa.yaml  utils.py
tasks/crisp_qa_sg/: crisp_qa_sg.yaml  utils.py
tasks/crisp_sgc/: crisp_sgc.yaml  utils.py
utils/: __init__.py  io.py  paths.py
visualization/: analyze_qa_sg_results.py  visualize_qa_confusion_matrix.py  visualize_relation_confusion_matrix.py
